# IA-Developpement-Workflow-IDE

./: .coverage  .gitignore  README.md  deploy.py  install_bmad.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: bmad-bmm-quick-dev-new-preview.prompt.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
bundle/: README.md  pyproject.toml
bundle/.github/: copilot-instructions.md
bundle/.github/agents/: AIDE-agent-memoire.agent.md  AIDE-analyseur-bp.agent.md  AIDE-analyseur-perf.agent.md  AIDE-analyseur-secu.agent.md  AIDE-arch-gui.agent.md  AIDE-arch-metier.agent.md  AIDE-arch-produit.agent.md  AIDE-arch-technique.agent.md  AIDE-brainstormer.agent.md  AIDE-cartographe.agent.md  AIDE-developpeur.agent.md  AIDE-documentaliste.agent.md  AIDE-fixeur-integration.agent.md  AIDE-integrateur.agent.md  AIDE-magazinier.agent.md  AIDE-orchestrateur.agent.md  AIDE-testeur.agent.md
bundle/.github/prompts/: AIDE-workflow-existant.prompt.md  AIDE-workflow-feature.prompt.md  AIDE-workflow-init.prompt.md  AIDE-workflow-status.prompt.md  AIDE-workflow-vierge.prompt.md
docs/: Agents.md  Architecture.md  BMAD-AIDE-Coexistence.md  Deployment.md  Workflow.md
docs/agents/: analyst.md  architect.md  bmad-master.md  code-reviewer.md  developer.md  devops.md  product-manager.md  qa.md  quick-flow-solo-dev.md  researcher.md  scrum-master.md  security.md  tech-writer.md  testing-specialist.md  (+1 more)
scripts/: generate_bundle.py
tests/: conftest.py
(+100 files in other folders)
